--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,9 @@ defaults:
       
 # Syntax
 markdown: kramdown
-highlighter: rouge
+kramdown:
+input: GFM
+syntax_highlighter: rouge
 
 # Paginate
 paginate: 10
