--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@ email: 'schristy@medford.k12.ma.us'
   # mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 
 include: ["_pages"]
-permalink: /:title/
+  # permalink: /:title/
+permalink: pretty
 
 # Plugins
 plugins: 
