--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ baseurl: /mrchristysengineering
 # google_analytics: 'UA-46278016-1'
 utterances:
   repo: 'medfordengineering/mrchristysengineering'
+  label: 'blog comment thread'
     # theme: 'github-dark'
     # issue-term: 'pathname'
 # mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
